kubernetes/sopes2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-sopes-deployment
spec:
  selector:
    matchLabels:
      role: backend-sopes-deployment
  replicas: 3
  template:
    metadata:
      labels:
        role: backend-sopes-deployment
    spec:
      containers:
      - name: backen-sopes
        image: osmanpl9610/backend_v6:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-sopes-service
spec:
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
  selector:
    role: backend-sopes-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-sopes-deployment
spec:
  selector:
    matchLabels:
      role: frontend-sopes-deployment
  replicas: 2
  template:
    metadata:
      labels:
        role: frontend-sopes-deployment
    spec:
      containers:
      - name: backen-sopes
        image: osmanpl9610/frontend_v5:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-sopes-service
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    role: frontend-sopes-deployment
---
